<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_dialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <EditText
        android:id="@+id/meeting_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="sujet de la réunion"
        android:textSize="12dp"
        android:drawableStart="@drawable/ic_subject_grey_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:textColor="@color/colorDialogText"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_normal"
        android:background="@color/colorDialogText"
        app:layout_constraintTop_toBottomOf="@+id/meeting_topic"/>

    <TextView
        android:id="@+id/tv_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:drawableStart="@drawable/ic_date_range_grey_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:layout_margin="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@+id/separator"/>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_normal"
        android:background="@color/colorDialogText"
        app:layout_constraintTop_toBottomOf="@+id/tv_datepicker"/>

        <ImageView
            android:id="@+id/meeting_room_spinner_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_meeting_room_grey_24dp"
            android:layout_margin="@dimen/margin_normal"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/separator2"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/room_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textColor="@color/colorDialogText"
            app:layout_constraintStart_toEndOf="@+id/meeting_room_spinner_icon"
            app:layout_constraintEnd_toStartOf="@+id/spinner_meeting_room_icon"
            app:layout_constraintTop_toTopOf="@+id/meeting_room_spinner_icon"/>

        <ImageView
            android:id="@+id/spinner_meeting_room_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0.1"
            tools:ignore="ContentDescription,MissingConstraints"
            android:src="@drawable/ic_mario"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/padding_normal"
            app:layout_constraintTop_toTopOf="@+id/meeting_room_spinner_icon"/>

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_normal"
        android:background="@color/colorDialogText"
        app:layout_constraintTop_toBottomOf="@+id/spinner_meeting_room_icon"/>

        <TextView
            android:id="@+id/members_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:drawableStart="@drawable/ic_group_add_grey_24dp"
            android:drawablePadding="@dimen/drawable_padding"
            app:layout_constraintTop_toBottomOf="@+id/separator3"/>

</android.support.constraint.ConstraintLayout>